--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -14,32 +14,6 @@
         <!-- The header for the logo, we could also put the nav inside the header eventually -->
         <!-- Also, the header is shared among pages -->
         <header class="page-header">
-
-            <!-- Logo can come here -->
-            <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;">
-            </figure>
-
-            <!-- nav-tag for navigation between our five pages and is shared among pages -->
-            <nav class="navbar">
-                <ul class="navbar__list">
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="index.html">Home</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="summary.html">Synopsis</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="ratings.html">Ratings</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="cast.html">Cast</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
         </header>
         <main class="content">
             <article id="ratings">
@@ -113,15 +87,15 @@
                 <section class="section">
                     <h2 class="section__title"> Breakdown</h2>
                     <p class="section__paragraph"> Here's a quick breakdown of what each of these ratings mean and how they are calculated: </p>
-                    <p class="section__paragraph">1. IMDb (Internet Movie Database) - This is a popular movie and TV show rating platform where users can rate movies on a scale of 1 to 10. The rating for "The Martian" on IMDb is 8.0 out of 10, which is a relatively high rating. This means that a majority of users who have rated the movie on IMDb have given it a positive score. 
-                        <br> 2. Rotten Tomatoes - Rotten Tomatoes is a review aggregation website that collects reviews from professional critics and calculates an overall score based on the percentage of positive reviews. "The Martian" has a rating of 91% on Rotten Tomatoes, which indicates that a vast majority of critics have given the movie positive reviews. 
+                    <p class="section__paragraph">1. IMDb (Internet Movie Database) - This is a popular movie and TV show rating platform where users can rate movies on a scale of 1 to 10. The rating for "The Martian" on IMDb is 8.0 out of 10, which is a relatively high rating. This means that a majority of users who have rated the movie on IMDb have given it a positive score.
+                        <br> 2. Rotten Tomatoes - Rotten Tomatoes is a review aggregation website that collects reviews from professional critics and calculates an overall score based on the percentage of positive reviews. "The Martian" has a rating of 91% on Rotten Tomatoes, which indicates that a vast majority of critics have given the movie positive reviews.
                         <br> 3. The Guardian is a popular UK-based newspaper that publishes movie reviews and ratings. The newspaper uses a rating system based on a scale of 1 to 5 stars. The Martian has received 4 stars which is considered to be an excellent movie. The reviewer highly recommends the movie and finds it to be well-made, entertaining, and thought-provoking. The reviewer may have some minor criticisms, but overall, the movie is highly praised.
                         <br> 4. Google Users - This is the rating given by users on Google. It is an average of the scores given by people who have rated the movie on Google. In the case of "The Martian," the rating by Google users is 93%, indicating a high level of approval from those who have rated the movie.
                         <br> 5. Metacritic - Metacritic is another review aggregation website that assigns a score to movies based on reviews from professional critics. The score is calculated on a scale of 0 to 100. "The Martian" has a score of 80 out of 100 on Metacritic, which is generally considered a positive score.
                         <br> 6. Amazon Prime Video Rating - This is the rating given by users on Amazon Prime Video, based on their personal opinions after watching the movie. The rating is calculated on a scale of 1 to 5 stars, with 5 stars being the highest rating. As of my knowledge cutoff date of September 2021, "The Martian" has a rating of 4.7 out of 5 stars on Amazon Prime Video.
                     </p>
-                    
-                    
+
+
                 </section>
 
                 <section class="section">
@@ -150,5 +124,6 @@
                 </div>
             </section>
         </footer>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
