--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -14,32 +14,6 @@
         <!-- The header for the logo, we could also put the nav inside the header eventually -->
         <!-- Also, the header is shared among pages -->
         <header class="page-header">
-
-            <!-- Logo can come here -->
-            <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;">
-            </figure>
-
-            <!-- nav-tag for navigation between our five pages and is shared among pages -->
-            <nav class="navbar">
-                <ul class="navbar__list">
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="index.html">Home</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="summary.html">Synopsis</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="ratings.html">Ratings</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="cast.html">Cast</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a class="navbar__link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
         </header>
         <main class="content content__cast">
             <article>
@@ -108,5 +82,6 @@
                 </div>
             </section>
         </footer>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
