--- a/Assignment1/info.html
+++ b/Assignment1/info.html
@@ -3,13 +3,14 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/style.css">
+        <title>The Martian | Info</title>
     </head>
     <body>
         <header class="page-header">
 
         </header>
         <main>
-            
+
 
         </main>
         <footer>
